dot files pushed by user xavier666 for machine lazarus

--- a/dot_files/lazarus/ranger/history
+++ b/dot_files/lazarus/ranger/history
@@ -36,3 +36,11 @@ rename svn_remote
 rename nice.jpg
 rename amara_time.csv
 delete
+rename coding_laz.ini
+rename coding_pro.ini
+rename config_bak
+rename config
+w
+rename config.ini
+rename config_original.ini
+cd 
